--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,77 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: system-ui, sans-serif;
-  color: black;
-  background-color: white;
-}
-
-nav {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: 0.5rem;
-  gap: 0.5rem;
-  border-bottom: solid 1px #aaa;
-  background-color: #eee;
-}
-
-nav a {
-  display: inline-block;
-  min-width: 9rem;
-  padding: 0.5rem;
-  border-radius: 0.2rem;
-  border: solid 1px #aaa;
-  text-align: center;
-  text-decoration: none;
-  color: #555;
-}
-
-nav a[aria-current='page'] {
-  color: #000;
-  background-color: #d4d4d4;
-}
-
-main {
-  padding: 1rem;
-}
-
 h1 {
   font-weight: bold;
   font-size: 1.5rem;
+  color: crimson;
+  background-color: yellow;
+}
+h1 {
+  text-align: center;
+  border: 2px;
+  border-radius: 20%;
+  height: 60px;
+}
+h2 {
+  font-weight: bold;
+  font-size: 1 rem;
+  color: crimson;
+  background-color: yellow;
+
+  text-align: center;
+}
+
+/*nav {
+  background-color: yellow;
+  list-style: none;
+
+}*/
+h3 {
+  color: #f0f8ff;
+  font-size: larger;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  
+}
+.heroDanmark {
+  display: flex;
+  align-items:center ;
+  justify-content:space-around;
+
+}
+.heroimgdanmark{
+  width: 200px;
+  background-color: yellow;
+  height: 222px;
+  
+}
+.herotextdanmark{
+  width: 400px;
+  height: 222px;
+  background-color: red;
+}
+.intro{
+  display: flex;
+}
+.imgbilder{
+  max-width: 150px;
+  max-height: 250px;
+}
+.imgkaruseli{
+  width: 400px;
+  height: 50px;
+  
+}
+.imgtransport{
+  max-width: 300px;
+  max-height: 400px;
+}
+.hjerte{
+  width: 20px;
+  height: 20px;
+}
+.heroTransport{
+  display: flex;
+}
+.karuseliDiv{
+  display: grid;
+  grid-template-rows: 400px 400px;
+
 }
