--- a/styles.css
+++ b/styles.css
@@ -54,9 +54,10 @@ h3 {
   max-width: 150px;
   max-height: 250px;
 }
-.imgkaruseli{
+.imgPark{
   width: 400px;
   height: 50px;
+  align-items: center;
   
 }
 .imgtransport{
@@ -70,8 +71,9 @@ h3 {
 .heroTransport{
   display: flex;
 }
-.karuseliDiv{
-  display: grid;
-  grid-template-rows: 400px 400px;
+.ParkDiv{
+  display: flex;
+  align-items:center ;
+
 
 }
