--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ h2 {
 
 }*/
 h3 {
+  
   color: #f0f8ff;
   font-size: larger;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -34,6 +35,7 @@ h3 {
   display: flex;
   align-items:center ;
   justify-content:space-around;
+  margin-top: 20px;
 
 }
 .heroimgdanmark{
@@ -80,5 +82,5 @@ h3 {
 .button{
   background-color: red;
   color:yellow;
-  padd
+  
 }
