--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ h3 {
   align-items: center;
   width: 400px;
   height: 222px;
-  background-color: rgb(230, 135, 135);
+  background-color: red;
 }
 .intro{
   display: flex;
@@ -73,7 +73,7 @@ h3 {
   align-items: center;
   justify-content:space-around;
   margin-top: 120px;
-  background-color:rgb(125, 131, 125);
+  background-color:darkgreen;
   
 
 }
