--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ h1 {
 h2 {
   font-weight: bold;
   font-size: 1 rem;
-  color: white;
+  color:red;
   text-align: center;
 }
 
@@ -73,7 +73,7 @@ h3 {
   align-items: center;
   justify-content:space-around;
   margin-top: 120px;
-  background-color:darkgreen;
+  background-color:rgb(9, 56, 227);
   
 
 }
