--- a/styles.css
+++ b/styles.css
@@ -92,3 +92,9 @@ h3 {
   width: 150px;
   height: 200px;
 }
+.heroImgSwim{
+  background-color: aqua;
+}
+#overnatting{
+  background-color: aqua;
+}
