--- a/styles.css
+++ b/styles.css
@@ -88,12 +88,12 @@ h3 {
   color:yellow;
   
 }
-.imgswim{
+.imgSwim{
   width: 150px;
   height: 200px;
 }
 .heroImgSwim{
-  background-color: aqua;
+  backgr;
 }
 #overnatting{
   background-color: aqua;
