--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,12 @@ h3 {
   height: 350px;
   margin-top: 20px;
 }
+
+.imgPool{
+  width: 200px;
+  height: 350px;
+  margin-top: 20px;
+}
 .heroImgSwim{
   width: 200px;
 
@@ -100,6 +106,7 @@ h3 {
 }
 #overnatting{
   background-color: rgb(0, 34, 255);
+  display: grid;
 }
 .herotextSwim{
   color:white;
