--- a/styles.css
+++ b/styles.css
@@ -91,22 +91,25 @@ h3 {
 .imgSwim{
   width: 200px;
   height: 350px;
-  margin-top: 20px;
+  margin-top: 60px;
 }
 
 .imgPool{
-  width: 200px;
+  width: 300px;
   height: 350px;
-  margin-top: 20px;
+  margin-top: 60px;
 }
 .heroImgSwim{
   width: 200px;
 
   height: 399px;
+  row-gap: 100px;
 }
 #overnatting{
   background-color: rgb(0, 34, 255);
-  display: grid;
+  display: flex;
+  justify-items: space-around;
+  row-gap: 100px;
 }
 .herotextSwim{
   color:white;
