--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ h3 {
   height: 399px;
   row-gap: 100px;
 }
-#Live{
+#overnatting{
   background-color: rgb(0, 34, 255);
   display: flex;
   justify-items: space-around;
