--- a/styles.css
+++ b/styles.css
@@ -91,33 +91,44 @@ h3 {
   
 }
 .imgSwim{
-  width: 200px;
+  width: 300px;
   height: 350px;
-  margin-top: 60px;
+  margin-top: 20px;
 }
 
 .imgPool{
-  width: 200px;
+  width: 300px;
   height: 350px;
   margin-top: 60px;
 }
 .heroImgSwim{
-  width: 200px;
+  width: 400px;
 
   height: 399px;
-  row-gap: 100px;
+
 }
 #overnatting{
   background-color: rgb(0, 34, 255);
   display: flex;
-  justify-items: space-around;
   row-gap: 100px;
+  justify-content: space-around;
+
 
 }
 .herotextSwim{
   color:white;
-  width: 200px;
+  width: 300px;
 
   height: 222px;
 
+}
+.heroimgPool{
+  width: 300px;
+
+  height: 399px;
+
+}
+.imgmedia{
+  width: 100px;
+  height: 20px;
 }
