--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,11 @@ h1 {
   border-radius: 20%;
   height: 60px;
 }
+header{
+display:flex ;
+align-items: flex-end;
+justify-content: space-around;
+}
 h2 {
   font-weight: bold;
   font-size: 1 rem;
