--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 h1 {
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1,5rem;
   color: crimson;
   background-color:rgb(238, 238, 118);
-  padding-top: 10px;
+  padding: 10px;
 }
 h1 {
   text-align: center;
