--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,13 @@ h1 {
   font-size: 1,5rem;
   color: crimson;
   background-color:rgb(238, 238, 118);
-  padding: 10px;
+  padding: 20px;
 }
 h1 {
   text-align: center;
   border: 2px color red;
   border-radius: 20%;
-  height: 60px;
+  height: 30px;
 }
 
 h2 {
@@ -68,18 +68,18 @@ h3 {
 }
 .imgtransport{
   width: 300px;
-  height: 400px;
+  height: 370px;
 }
 
 .heroTransport{
   display: flex;
   align-items: center;
   justify-content:space-around;
-  margin-top: 20px;
-
-  
-  
-
+column-gap: 40px;
+}
+.herotextTransport{
+  width: 300;
+  height: 400px;
 }
 .ParkDiv{
   display: flex;
